--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .tenzie-board {
 	margin: auto;
-	height: 420px;
+	height: 520px;
 	width: 420px;
+	max-width: 92vw;
 	background-color: #f5f5f5;
 	border-radius: 10px;
 	padding: 35px;
@@ -66,4 +67,10 @@
 	outline: none;
 	border: none;
 	cursor: pointer;
+}
+
+.best-score {
+	font-size: 16px;
+	text-align: center;
+	color: #ff0000;
 }
